Add current projects

--- a/index.html
+++ b/index.html
@@ -108,23 +108,26 @@
                     <li id="all">
                         All
                     </li>
+                    <li id="current">
+                        Current
+                    </li>
                     <li id="featured">
                         Featured
-                    </li>
-                    <li id="vr">
-                        XR
-                    </li>
-                    <li id="pc">
-                        PC
-                    </li>
-                    <li id="mobile">
-                        Mobile
                     </li>
                 </ul>
                 
             </div>
         </div>
         <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current">
+                <div class="portfolio-item">
+                    <a href="http://www.yidizhu.com/articles/autistic.html" data-toggle="modal">
+                        <img src="http://via.placeholder.com/900x563/e8e8e8/e8e8e8" class="img-responsive" alt="">
+                        <p class="portfolio-title">Using Tech to Facilitate Empathy for Austism</p>
+                    </a>
+                </div>
+            </div>
+
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured vr">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/althea.html" data-toggle="modal">
