--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/autistic.html" data-toggle="modal">
                         <img src="http://via.placeholder.com/900x563/e8e8e8/e8e8e8" class="img-responsive" alt="">
-                        <p class="portfolio-title">Using Tech to Facilitate Empathy for Austism</p>
+                        <p class="portfolio-title">Empathy for Austism</p>
                     </a>
                 </div>
             </div>
