Change homepage intro and paddings

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="bio col-lg-8 col-lg-offset-2 text-center">
                         
                         <p>
-                            Hi there, I'm Yidi, a passionate game designer and programmer. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the Entertainment Technology Center of Carnegie Mellon University. I dedicate myself to making artful and meaningful games that have positive impact on people, and the world!
+                            A passionate game designer and programmer, <b>Master of Entertainment Technology</b> first year at Carnegie Mellon University. I dedicate myself to making artful and meaningful games that have positive impact on people, and the world!
                         </p>
 
                         <p class="quote">
