Move blog up front

--- a/index.html
+++ b/index.html
@@ -46,16 +46,14 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
+                    <a href="http://www.yidizhu.com/blog.html">Blog</a>
+                </li>
+                <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/about.html">About</a>
                 </li>
-                <!--
-                <li class="page-scroll">
-                    <a href="archive.html">Archive <i class="fa fa-external-link" aria-hidden="true"></i></a>
-                </li>
-                -->
 
             </ul>
         </div>
@@ -69,7 +67,6 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <!--<img class="img-responsive" style="width:512px; height:512px" src="resources/images/profile_svg.svg" alt=""> -->
                 <div class="intro-text">
                     <span class="headline">Crafting artistic meaningful games</span>
                     <hr class="star-light">
@@ -82,15 +79,7 @@
                         <p class="quote">
                             I'm currently looking for 2018 summer internship in <b>gameplay engineering</b> and <b>technical design.</b>
                         </p>
-                        <!--
-                        <p>
-                            As a game designer, I see games as art and an extremely expressive medium. I love making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tricky design challenge through collaboration, playtesting and iterations.
-                        </p>
-                        <p>
-                            As a game programmer, I am fascinated with the power of programming and am always willing to
-                                pick up new skills and experiment with new technologies. Thanks to my background in building engineering, I am highly skilled in calculus, engineering mathematics, and classical mechanics, which makes it easier for me to pick up new programming skills.
-                        </p>
-                        -->
+
                     </div>
                 </div>
             </div>
