--- a/index.html
+++ b/index.html
@@ -103,21 +103,29 @@
                     <li id="featured">
                         Featured
                     </li>
+
+                    <li id="group">
+                        Group
+                    </li>
+
+                    <li id="solo">
+                        Solo
+                    </li>
                 </ul>
                 
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/autistic.html" data-toggle="modal">
-                        <img src="http://via.placeholder.com/900x563/e8e8e8/e8e8e8" class="img-responsive" alt="">
+                        <img src="http://via.placeholder.com/900x563/ffffff/ffffff" class="img-responsive" alt="">
                         <p class="portfolio-title">Empathy for Austism</p>
                     </a>
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured vr">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/althea.html" data-toggle="modal">
                         <img src="resources/images/portfolio/tree.png" class="img-responsive" alt="">
@@ -126,7 +134,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured mobile">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/ripple-blossom.html" data-toggle="modal">
                         <img src="resources/images/portfolio/ripple-blossom.png" class="img-responsive" alt="">
@@ -137,7 +145,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured pc">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured solo">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/the-sea.html" data-toggle="modal">
                         <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
@@ -147,7 +155,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured pc">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured solo">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/yicon.html" data-toggle="modal">
                         <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
@@ -157,7 +165,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper vr">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/maestro.html" data-toggle="modal">
                         <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
@@ -167,7 +175,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper vr">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/you-are-fired.html" class="portfolio-link" data-toggle="modal">
                         <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
@@ -177,7 +185,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper pc">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/bopit.html" class="portfolio-link" data-toggle="modal">
                         <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
@@ -188,7 +196,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper vr">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/sound-bearier.html" class="portfolio-link" data-toggle="modal">
                         <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
