add game design class to portfolio

--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
                 </div>
             </div>
 
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current solo">
+                <div class="portfolio-item">
+                    <a href="http://www.yidizhu.com/articles/game-design.html" data-toggle="modal">
+                        <img src="resources/images/portfolio/game-design.png" class="img-responsive" alt="">
+                        <p class="portfolio-title">Game Design Coursework</p>
+                    </a>
+                </div>
+            </div>
+
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/althea.html" data-toggle="modal">
