Add meta description

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Yidi is a game designer, programmer, and first-year grad student at Entertainment Technology Center (ETC) of Carnegie Mellon University.">
+    <meta name="author" content="Yidi Zhu">
     <title>Yidi Zhu | Game Designer and Programmer</title>
 
     <!-- Bootstrap Core CSS -->
