Update header and fix typo

--- a/resources/header.html
+++ b/resources/header.html
@@ -17,6 +17,9 @@
                     <a href="http://www.yidizhu.com">Home</a>
                 </li>
                 <li class="page-scroll">
+                    <a href="http://www.yidizhu.com/blog.html">Blog</a>
+                </li>
+                <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
                 </li>
                 <li class="page-scroll">
