Update meta and add analytics

--- a/404.html
+++ b/404.html
@@ -3,13 +3,24 @@
 
 <head>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113144653-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-113144653-1');
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="keywords" content="Yidi Zhu, Yidi, Game Design">
+    <meta name="description" content="Yidi is a game designer and programmer, currently first year student at CMU ETC. This is his 404 page.">
+    <meta name="author" content="Yidi Zhu">
 
-    <title>Yidi Zhu | Welcome, lost souls</title>
+    <title>Yidi Zhu | Welcome, traveler</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
