--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
             </div>
         </div>
         <div class="row">
+            
+
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/autistic.html" data-toggle="modal">
@@ -161,6 +163,15 @@
                         <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
                         <p class="portfolio-title">You're Fired | Omni + Oculus</p>
                         <p class="portfolio-intro">Course Project | Omni & Oculus Touch</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
+                <div class="portfolio-item">
+                    <a href="http://www.yidizhu.com/articles/carrot.html" class="portfolio-link" data-toggle="modal">
+                        <img src="resources/images/portfolio/carrot.png" class="img-responsive" alt="">
+                        <p class="portfolio-title">Eat My Carrot! | GGJ 2018</p>
                     </a>
                 </div>
             </div>
@@ -226,6 +237,8 @@
                     </a>
                 </div>
             </div>
+
+            
 
         </div>
     </div>
