Typo fix and new resume

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                     <div class="bio col-lg-8 col-lg-offset-2 text-center">
                         
                         <p>
-                            A passionate game designer and programmer, <b>Master of Entertainment Technology</b> first year at Carnegie Mellon University. I dedicate myself to making artful and meaningful games that have positive impact on people, and the world!
+                            I'm Yidi, a passionate game designer and programmer, currently a <b>Master of Entertainment Technology</b> first year student at Carnegie Mellon University. I make artful and meaningful games that have positive impact on people, and the world!
                         </p>
 
                         <p class="quote">
-                            I'm currently looking for 2018 summer internship in <b>gameplay engineering</b> and <b>technical design.</b>
+                            I'm looking for 2018 summer internship in <b>gameplay engineering</b> and <b>technical design.</b>
                         </p>
 
                     </div>
@@ -114,14 +114,6 @@
                     </li>
                     <li id="featured">
                         Featured
-                    </li>
-
-                    <li id="group">
-                        Group
-                    </li>
-
-                    <li id="solo">
-                        Solo
                     </li>
                 </ul>
                 
