Update game-design page to open google spreadsheets in a new page, and update the rules page

--- a/d/rules.html
+++ b/d/rules.html
@@ -19,7 +19,7 @@
     <meta name="description" content="Althea is a 2-player VR game on Oculus, where players cooperate with each other to overcome obstacles and reach their destination. Players build up relationship during the journey through cooperative interactions and experience the world with stunning visuals, haunting music and unique gameplay.">
     <meta name="author" content="Yidi Zhu">
 
-    <title>Yidi | Althea</title>
+    <title>Yidi | Pirates of the Whirl - Rule Set</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
