update featured project

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group featured">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/you-are-fired.html" class="portfolio-link" data-toggle="modal">
                         <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
@@ -189,7 +189,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured solo">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/yicon.html" data-toggle="modal">
                         <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
