--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="bio col-lg-8 col-lg-offset-2 text-center">
                         
                         <p>
-                            I'm Yidi, a passionate game designer and programmer, currently a <b>Master of Entertainment Technology</b> first year student at Carnegie Mellon University. I make artful and meaningful games that have positive impact on people, and the world!
+                            I'm Yidi, a passionate game designer and programmer, currently a <b>Master of Entertainment Technology</b> first year student at Carnegie Mellon University. I make artful and meaningful games that have a positive impact on people, and the world!
                         </p>
 
                         <p class="quote">
@@ -139,6 +139,8 @@
                     </a>
                 </div>
             </div>
+
+            
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                 <div class="portfolio-item">
