--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </p>
 
                         <p class="quote">
-                            I'm looking for 2018 summer internship in <b>gameplay engineering</b> and <b>technical design.</b>
+                            I will be working at Spaces as a VR game programming intern for summer 2018. I'm looking for full-time job as gameplay engineer or game designer starting May 2019.
                         </p>
 
                     </div>
