--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </p>
 
                         <p class="quote">
-                            I will be working at Spaces as a VR game programming intern for summer 2018. I'm looking for full-time job as gameplay engineer or game designer starting May 2019.
+                            I will be working at Spaces as a VR game programming intern for summer 2018. I'm looking for a full-time gameplay engineer or game designer position starting May 2019.
                         </p>
 
                     </div>
