fb script added

--- a/p/index.html
+++ b/p/index.html
@@ -6,6 +6,13 @@
     <title>Prism | 04/13</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+    <script>
+  // Initialize Firebase
+      var config = {apiKey: "AIzaSyBJcZOBDWoyredT0QOzj8bbjpkxh0N335Q", authDomain: "testf-5dea4.firebaseapp.com", databaseURL: "https://testf-5dea4.firebaseio.com", projectId: "testf-5dea4", storageBucket: "testf-5dea4.appspot.com", messagingSenderId: "165641502284"};
+      firebase.initializeApp(config);
+    </script>
+
     <script src="TemplateData/UnityProgress.js"></script>  
     <script src="Build/UnityLoader.js"></script>
     <script>
