--- a/internal-build/index.html
+++ b/internal-build/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Prism | 04/18</title>
+    <title>Prism | 04/21</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -26,7 +26,26 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Prism alpha | April 18, 2018 (22:15)</div>
+        <div class="title">Prism alpha | April 21, 2018 (15:12)</div>
+      </div>
+      <br>
+      <br><br><br>
+      <div id="disqus_thread"></div>
+            <script>
+
+                 var disqus_config = function () {
+                 this.page.url = "http://www.yidizhu.com/p";
+                 this.page.identifier = "prism";
+                 };
+
+                (function() {
+                    var d = document, s = d.createElement('script');
+                    s.src = '//yidizhu.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
       </div>
     </div>
   </body>
