--- a/p/index.html
+++ b/p/index.html
@@ -32,17 +32,12 @@
       <div id="disqus_thread"></div>
             <script>
 
-                /**
-                 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-                 */
-
                  var disqus_config = function () {
-                 this.page.url = "http://www.yidizhu.com/p";  // Replace PAGE_URL with your page's canonical URL variable
-                 this.page.identifier = "prism"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                 this.page.url = "http://www.yidizhu.com/p";
+                 this.page.identifier = "prism";
                  };
 
-                (function() { // DON'T EDIT BELOW THIS LINE
+                (function() {
                     var d = document, s = d.createElement('script');
                     s.src = '//yidizhu.disqus.com/embed.js';
                     s.setAttribute('data-timestamp', +new Date());
@@ -50,7 +45,7 @@
                 })();
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </div>
+    	</div>
     </div>
   </body>
 </html>
