--- a/internal-build/index.html
+++ b/internal-build/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Prism | 04/21</title>
+    <title>Prism | 04/22</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -26,13 +26,10 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Prism alpha | April 21, 2018 (21:56)</div>
-      </div>
-      <br>
-      <br><br><br>
-      
+        <div class="title">Prism alpha | April 22, 2018 (20:21)</div>
+      </div> 
     </div>
-    <div id="disqus_thread"></div>
+    <div id="disqus_thread" style="position: absolute; top: 800px; width: 960px"></div>
             <script>
 
                  var disqus_config = function () {
@@ -48,6 +45,6 @@
                 })();
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-      </div>
+      
   </body>
 </html>
