--- a/internal-build/index.html
+++ b/internal-build/index.html
@@ -29,7 +29,7 @@
         <div class="title">Prism alpha | April 22, 2018 (21:01)</div>
       </div> 
     </div>
-    <div id="disqus_thread" style="position: absolute; top: 800px; width: 960px"></div>
+    <div id="disqus_thread" style="position: absolute; top: 800px; left: 50%; margin-left: -480px; width: 960px"></div>
             <script>
 
                  var disqus_config = function () {
