--- a/internal-build/index.html
+++ b/internal-build/index.html
@@ -17,7 +17,7 @@
     <script src="TemplateData/UnityProgress.js"></script>  
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/11.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/internal-build.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -26,7 +26,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Prism alpha | April 22, 2018 (21:01)</div>
+        <div class="title">Prism alpha | April 22, 2018 (23:12)</div>
       </div> 
     </div>
     <div id="disqus_thread" style="position: absolute; top: 50%; left: 50%; margin-top: 500px; margin-left: -480px; width: 960px"></div>
