--- a/p/index.html
+++ b/p/index.html
@@ -29,7 +29,7 @@
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
         <div class="title">Prism | April 19, 2018</div>
       </div>
-      <div id="disqus_thread"></div>
+      <div id="disqus_thread" style="position: absolute; top: 50%; left: 50%; margin-top: 400px; margin-left: -480px; width: 960px"></div>
             <script>
 
                  var disqus_config = function () {
@@ -45,7 +45,7 @@
                 })();
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    	</div>
+      
     </div>
   </body>
 </html>
