--- a/404.html
+++ b/404.html
@@ -51,10 +51,10 @@
                 <h2>404 Not Found!</h2>
                 <hr class="star-light">
                 <p>
-                    Seems you are lost, travler.
+                    Seems you are lost, traveler.
                 </p>
                 <p>
-                    Maybe you want to look at my <a href="http://www.yidizhu.com/#portfolio"> portfolio</a> or <a href="http://www.yidizhu.com/blog"> read something</a>?
+                    Maybe you want to look at my <a href="http://www.yidizhu.com/"> portfolio</a> or <a href="http://www.yidizhu.com/blog"> read something</a>?
                 </p>
                 <p>
                     Or it would be nice to just <a href="mailto:yidiz@andrew.cmu.edu">send me an email</a>!
