--- a/p/index.html
+++ b/p/index.html
@@ -17,7 +17,7 @@
     <script src="TemplateData/UnityProgress.js"></script>  
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/internal-build.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/p.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -26,7 +26,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title"><a href="https://www.etc.cmu.edu/projects/prism/">Prism</a></div>
+        <div class="title"><a href="https://www.etc.cmu.edu/projects/prism/">Prism | April 24</a></div>
       </div> 
     </div>
     <div id="disqus_thread" style="position: absolute; top: 50%; left: 50%; margin-top: 400px; margin-left: -480px; width: 960px"></div>
