--- a/p/index.html
+++ b/p/index.html
@@ -26,7 +26,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title"><a href="https://www.etc.cmu.edu/projects/prism/">Prism | April 24</a></div>
+        <div class="title"><a href="https://www.etc.cmu.edu/projects/prism/">Prism | April 24 (11:05)</a></div>
       </div> 
     </div>
     <div id="disqus_thread" style="position: absolute; top: 50%; left: 50%; margin-top: 400px; margin-left: -480px; width: 960px"></div>
