--- a/internal-build/index.html
+++ b/internal-build/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117092324-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-117092324-1');
-    </script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Prism | 04/23</title>
+    <title>Prism</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -26,23 +18,8 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Prism | April 23, 2018 (14:34)</div>
-      </div> 
+        <div class="title">Prism | April 24 (20:36)</div>
+      </div>
     </div>
-    <div id="disqus_thread" style="position: absolute; top: 50%; left: 50%; margin-top: 400px; margin-left: -480px; width: 960px"></div>
-            <script>
-                 var disqus_config = function () {
-                 this.page.url = "http://www.yidizhu.com/p";
-                 this.page.identifier = "prism";
-                 };
-                (function() {
-                    var d = document, s = d.createElement('script');
-                    s.src = '//yidizhu.disqus.com/embed.js';
-                    s.setAttribute('data-timestamp', +new Date());
-                    (d.head || d.body).appendChild(s);
-                })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-      
   </body>
 </html>
