--- a/pga/index.html
+++ b/pga/index.html
@@ -32,7 +32,7 @@
     <div id="disqus_thread" style="position: absolute; top: 50%; left: 50%; margin-top: 400px; margin-left: -480px; width: 960px"></div>
             <script>
                  var disqus_config = function () {
-                 this.page.url = "http://www.yidizhu.com/p";
+                 this.page.url = "http://www.yidizhu.com/pga";
                  this.page.identifier = "prism";
                  };
                 (function() {
