--- a/p/index.html
+++ b/p/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Prism</title>
+    <title>Prism | May 1</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -26,7 +26,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title"><a target="_blank" href="https://www.etc.cmu.edu/projects/prism/">Prism | April 26 (11:00)</a></div>
+        <div class="title">Prism | Click here to go full screen -></div>
       </div> 
     </div>
     <div id="disqus_thread" style="position: absolute; top: 50%; left: 50%; margin-top: 400px; margin-left: -480px; width: 960px"></div>
