--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
                 </div>
             </div>
 
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
+                <div class="portfolio-item">
+                    <a href="http://www.yidizhu.com/articles/you.html" class="portfolio-link" data-toggle="modal">
+                        <img src="resources/images/portfolio/you.png" class="img-responsive" alt="">
+                        <p class="portfolio-title">You | Solo project</p>
+                    </a>
+                </div>
+            </div>
+
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group featured">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/you-are-fired.html" class="portfolio-link" data-toggle="modal">
