--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                     <div class="bio col-lg-8 col-lg-offset-2 text-center">
                         
                         <p>
-                            I'm Yidi, a passionate game designer and programmer, currently a <b>Master of Entertainment Technology</b> first year student at Carnegie Mellon University. I make artful and meaningful games that have a positive impact on people, and the world!
+                            I'm Yidi, a passionate game designer and programmer, currently a <b>Master of Entertainment Technology</b> second year student at Carnegie Mellon University. I love making artful and meaningful experience that have a positive impact on people.
                         </p>
 
                         <p class="quote">
-                            I will be working at Spaces as a VR game programming intern for summer 2018. I'm looking for a full-time gameplay engineer or game designer position starting May 2019.
+                            I'm looking for a full-time gameplay engineer and technical designer position starting May 2019.
                         </p>
 
                     </div>
@@ -122,16 +122,16 @@
         <div class="row">
             
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current group">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/autistic.html" data-toggle="modal">
                         <img src="resources/images/portfolio/prism-title.png" class="img-responsive" alt="">
-                        <p class="portfolio-title">Empathy for Austism</p>
+                        <p class="portfolio-title">Prism</p>
                     </a>
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current solo">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper all solo">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/game-design.html" data-toggle="modal">
                         <img src="resources/images/portfolio/game-design.png" class="img-responsive" alt="">
@@ -197,7 +197,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group featured">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group all">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/you-are-fired.html" class="portfolio-link" data-toggle="modal">
                         <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
