--- a/index.html
+++ b/index.html
@@ -126,7 +126,16 @@
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/autistic.html" data-toggle="modal">
                         <img src="resources/images/portfolio/prism-title.png" class="img-responsive" alt="">
-                        <p class="portfolio-title">Prism</p>
+                        <p class="portfolio-title">Prism | Autism Awareness</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current group">
+                <div class="portfolio-item">
+                    <a href="http://www.yidizhu.com/articles/isetta.html" data-toggle="modal">
+                        <img src="resources/images/portfolio/engine.png" class="img-responsive" alt="">
+                        <p class="portfolio-title">Isetta Game Engine</p>
                     </a>
                 </div>
             </div>
