Updated game design page

--- a/games/pirates-of-the-whirl/ruleset.html
+++ b/games/pirates-of-the-whirl/ruleset.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- Theme CSS -->
-    <link href="../css/freelancer.css" rel="stylesheet">
+    <link href="../../css/freelancer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css">
@@ -35,7 +35,7 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../js/loader.js"></script>
+    <script src="../../js/loader.js"></script>
 </head>
 
 <body id="page-top" class="index">
@@ -53,7 +53,7 @@
                 <h3>What's this?</h3>
                 <p>Rule set for the game <i>Pirates of the Whirl</i>, which is created for the Game Design class.</p>
                 <p>
-                    This is only the rule set, for descriptions of map elements, cards, and battle mechanics, see the attached sheets in the package. 
+                    This is only the rule set, if you want to play the game, <a href="mailto:zhuyidiwow@gmail.com">contact me!</a>
                 </p>
 
                 <h3>Set up</h3>
