--- a/resources/footer.html
+++ b/resources/footer.html
@@ -5,7 +5,7 @@
                     <h3>CONTACT</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="mailto:yidiz@andrew.cmu.edu" class="btn-social btn-outline"><i
+                            <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
                                     class="fa fa-envelope"></i></a>
                         </li>
                         <li>
