--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="js/loader.js"></script>
 </head>
 
 <body id="page-top" class="index">
@@ -53,11 +53,11 @@
                     <div class="bio col-lg-8 col-lg-offset-2 text-center">
                         
                         <p>
-                            Hey! Come in, come in. You can find my name at the top left coner. The things I make - games, interactive experiences, and game engines alike - are layed out for you to explore below. 
+                            Hey, come on in! You can find my name at the top left coner. And the things I make - games, interactive experiences, and game engines alike - are layed out on the shelf below. 
                         </p>
 
                         <p>
-                            If you are also making such things, I would love to talk about them and potentially offer a little help. Let me know!
+                            If you are also crafting such things, I would love to talk to you about them and potentially offer a tiny help. Let me know!
                         </p>
 
                         <p>
