--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="bio col-lg-8 col-lg-offset-2 text-center">
                         
                         <p>
-                            Hey, come on in! You can find my name at the top left coner. And the things I make - games, interactive experiences, and game engines alike - are layed out on the shelf below. 
+                            Hey, come on in! Welcome to my place. You can find my name at the top left coner. And the things I make - games, interactive experiences, and game engines alike - are layed out on the shelf below. 
                         </p>
 
                         <p>
