some minor updates

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="bio col-lg-8 col-lg-offset-2 text-center">
                         
                         <p>
-                            Hey, come on in! Welcome to my place. Things I make - games, interactive experiences, and game engines alike - are layed out on the shelf below. 
+                            Hey, come on in! Welcome to my place. Things I make - games, interactive experiences, and game engines alike - are proudly showcased here. 
                         </p>
 
                         <p>
@@ -92,7 +92,6 @@
         </div>
         <div class="row">
             
-
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/game-design.html" data-toggle="modal">
@@ -129,7 +128,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current featured group">
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/articles/isetta.html" data-toggle="modal">
                         <img src="resources/images/portfolio/engine.jpg" class="img-responsive" alt="">
@@ -202,6 +201,12 @@
                 </div>
             </div>
 
+            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current">
+                <div class="portfolio-item">
+                    <img src="https://dummyimage.com/900x563/ffffff/ffffff.png" class="img-responsive" alt="">
+                    <p class="portfolio-title">A Full-time Job...</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
