--- a/resources/footer.html
+++ b/resources/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="footer-col col-md-8 col-md-offset-2">
-                <h3>CONTACT</h3>
+                <!-- <h3>CONTACT</h3> -->
                 <ul class="list-inline">
                     <li>
                         <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
