--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <header>
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <section class="portfolio">
