--- a/index.html
+++ b/index.html
@@ -208,9 +208,10 @@
     </section>
 
     <!-- Footer -->
-    <footer id="footer" class="text-center">
+    <!-- <footer id="footer" class="text-center">
 
-    </footer>
+    </footer> -->
+
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
         <a class="btn btn-primary" href="#page-top">
